<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".presentation.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.6"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:src="@drawable/white_background"

            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"/>

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:src="@drawable/logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.2"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@id/tvTenDangNhap"
            />

        <TextView
            android:id="@+id/tvTenDangNhap"

            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintHorizontal_bias="0.05"

            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@id/etEmail"/>

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/tvTenDangNhap"
            app:layout_constraintStart_toEndOf="@id/tvTenDangNhap"
            android:text="@string/this_field_can_t_be_blank"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etEmail"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.1"

            android:hint="@string/email"
            android:textSize="15sp"
            android:textColorHint="@color/gray"
            android:background="@drawable/edit_text_border"

            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/tvTenDangNhap"
            app:layout_constraintBottom_toTopOf="@id/tvMatKhau"/>

        <TextView
            android:id="@+id/tvMatKhau"

            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintHorizontal_bias="0.05"

            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/tvMatKhau"
            app:layout_constraintStart_toEndOf="@id/tvMatKhau"
            android:text="@string/this_field_can_t_be_blank"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etPassword"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.1"

            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"

            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/tvMatKhau"
            app:layout_constraintBottom_toTopOf="@id/tvQuenMK"/>

        <TextView
            android:id="@+id/tvQuenMK"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="15sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintHorizontal_bias="0.05"

            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"/>

        <Button
            android:id="@+id/btnLogin"

            android:backgroundTint="@color/blue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/login"
            android:textColor="@color/white"

            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.11"

            app:layout_constraintTop_toBottomOf="@id/tvQuenMK"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_don_t_have_an_account"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>